--- a/css/main.css
+++ b/css/main.css
@@ -580,6 +580,7 @@ top: 40px;
     background-color: #FAF6FA;
     margin-top: 150px;
     padding-left: 50px;
+    padding-right: 50px;
     padding-bottom: 100px;
 }
 
@@ -598,7 +599,7 @@ top: 40px;
 
 input[type=text], select, textarea {
     display: block;
-    width: 400px;
+    width: 50%;
     padding: 10px; 
     border: 1px solid lavender;
     border-radius: 4px; 
@@ -610,7 +611,7 @@ input[type=text], select, textarea {
 
   input[type=email] {
     display: block;
-    width: 400px;
+    width: 50%;
     padding: 10px; 
     border: 1px solid lavender;
     border-radius: 4px; 
