--- a/css/main.css
+++ b/css/main.css
@@ -717,15 +717,18 @@ h2 {
 
 .cruda-studio {
     height: 100px;
+    width: 100%;
 
 }
 
 .rover {
     height: 100px;
+    width: 100%;
 }
 
 .airbnb {
     height: 100px;
+    width: 100%;
 }
 
 .explore {
